<resources>
    <string name="app_name">TrackTrigger</string>
    <string name="search">Search</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="profile_pic">Profile pic (circular)</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="inventory">Inventory</string>
    <string name="household">Household</string>
    <string name="notif">Work Reminder</string>
    <string name="sendNotif">Send Notification</string>
    <string name="work">Work</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="product_heading">Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="help_and_support">Help and Support</string>
    <string name="system_settings">System Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings_and_privacy">Settings and Privacy</string>
</resources>