<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/homebtn"
            android:title="@string/home"/>

        <item
            android:id="@+id/drawer_house"
            android:icon="@drawable/house"
            android:title="@string/household"/>

        <item
            android:id="@+id/drawer_work"
            android:icon="@drawable/work"
            android:title="@string/work"/>

        <item
            android:id="@+id/drawer_notes"
            android:icon="@drawable/notes"
            android:title="@string/notes"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>


    </group>

</menu>